--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.impl.TestActivity">
+        <activity android:name=".activity.impl.TestActivity" android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".activity.impl.boat.BoatActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
