--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.impl.TestActivity" android:screenOrientation="portrait">
+        <activity android:name=".activity.impl.test.TestActivity" android:screenOrientation="portrait">
         </activity>
         <activity android:name=".activity.impl.boat.BoatActivity" android:screenOrientation="portrait">
             <intent-filter>
