--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.impl.boat.MotorBoatActivity" android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
