Added activity theme with no action bar for the boat-display pages.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.impl.test.TestActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".activity.impl.boat.BoatActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".activity.impl.boat.MotorBoatActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.impl.test.TestActivity" android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".activity.impl.boat.BoatActivity" android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".activity.impl.boat.MotorBoatActivity" android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
